--- a/sass/modules/post-card/_post-card-one.scss
+++ b/sass/modules/post-card/_post-card-one.scss
@@ -81,6 +81,7 @@
               color: $primary-color;
             }
           }
+          a,
           p {
             font-size: 12px;
             font-weight: 400;
