--- a/sass/modules/post-card/_post-card-two.scss
+++ b/sass/modules/post-card/_post-card-two.scss
@@ -13,6 +13,9 @@
                 .title {
                     margin-top: 0;
                 }
+                .post-meta{
+                    gap: 30px;
+                }
             }
         }
     }
